Fixed img not showing up on single-animal page. Also should have fixed image rescaling in skinny grids.

--- a/css/adopt-grid.css
+++ b/css/adopt-grid.css
@@ -42,7 +42,6 @@ table[bgcolor='#ffffff'] td {
   background-image: none;
 }
 
-img {
+a > img {
   max-width: 100%;
-  max-height: 100%;
 }
